<?xml version="1.0"?>
<package format="2">
  <name>calibration_files</name>
  <version>0.0.0</version>
  <description>The calibration_files package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <maintainer email="jiaojh1994@gmail.com">Jianhao Jiao</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <!-- <depend>dvs_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>tf_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>

  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>
  
  <depend>ramlab_filter</depend> -->

</package>
